--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -11,6 +11,10 @@ h1, ion-text, ion-button {
     text-shadow: 2px 2px 4px gray;
 }
 
+h1 {
+    font-size: 40px;
+}
+
 ion-text {
     font-size: 20px;
     font-style: italic;
