--- a/src/app/discovery/discovery.page.html
+++ b/src/app/discovery/discovery.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="background-image">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Descobrir</ion-title>
@@ -66,9 +66,9 @@
                     <p class="text">{{ roteiro.destinoC}}</p>
                 </ion-row>
         </ion-col>
-        <ion-col size="1">
-          <ion-button fill="solid" class="i-text shadow botao"  (click)="addPartilhadoBiblioteca(roteiro.id_interno)">
-            <ion-icon color="primary" name="add-circle-outline"></ion-icon>
+        <ion-col size="3">
+          <ion-button fill="solid" class="i-text shadow botao" (click)="addPartilhadoBiblioteca(roteiro.id_interno, $event)">
+            <ion-icon size="large" [color]="iconColor" [name]="iconName"></ion-icon>
           </ion-button>
         </ion-col>
       </ion-row>
