--- a/src/app/discovery/discovery.page.scss
+++ b/src/app/discovery/discovery.page.scss
@@ -13,6 +13,15 @@ ion-title{
     justify-content: center;
 }
 
+.background-image{
+  --background:  url(../../assets/imgs/back.png) 100% 100%/65% 27% no-repeat;
+
+}
+
+.botao {
+  width: 100%;
+}
+
 ion-row {
     margin: 0 auto;
 }
