--- a/src/app/discovery/discovery.page.html
+++ b/src/app/discovery/discovery.page.html
@@ -3,16 +3,19 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Descobrir</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content class="background-image" [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Descobrir</ion-title>
     </ion-toolbar>
   </ion-header>
+
+<ion-text color="dark">
+  <h2 id="title">Descobrir</h2>
+</ion-text>
 
 <ion-searchbar animated="true" debounce=250 placeholder="Encontre um Roteiro por Cidade" show-clear-button="focus" (ionInput)="handleInput($event)"></ion-searchbar>
 
@@ -66,9 +69,9 @@
                     <p class="text">{{ roteiro.destinoC}}</p>
                 </ion-row>
         </ion-col>
-        <ion-col size="1">
+        <ion-col size="3">
           <ion-button fill="solid" class="i-text shadow botao"  (click)="addPartilhadoBiblioteca(roteiro.id_interno)">
-            <ion-icon color="primary" name="add-circle-outline"></ion-icon>
+            <ion-icon color="dark" size="large" name="add-circle-outline"></ion-icon>
           </ion-button>
         </ion-col>
       </ion-row>
