--- a/src/app/discovery/discovery.page.scss
+++ b/src/app/discovery/discovery.page.scss
@@ -38,3 +38,22 @@ ion-row {
   .plus {
     font-size: 30px;
   }
+
+  ion-button {
+    width: 100%;
+  }
+
+  #title {
+    text-align: center;
+    margin : 0 20px; 
+    margin-top: 20px;
+    text-shadow: 2px 2px 5px rgb(160, 160, 160);
+    font-weight: bold;
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+
+.background-image{
+  --background:  url(../../assets/imgs/back.png) 100% 100%/65% 27% no-repeat;
+
+}
