--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -1,6 +1,8 @@
 <ion-header [translucent]="false">
   <ion-toolbar>
-    <ion-menu-button></ion-menu-button>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -11,22 +13,33 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-title size="large">Alterar informações do Perfil</ion-title>
+  <ion-text color="dark">
+    <h2 id="title">Alterar informações do Perfil</h2>
+  </ion-text>
 
-  <form [formGroup]="userUpdateForm" (ngSubmit)="onSubmit()">
-
-    <ion-input  class="title" label="Nome" formControlName="name" value="{{nome}}"></ion-input>
-
-
-    <ion-input  class="title" label="Password" type="{{passwordType}}" formControlName="password" value="{{password}}"></ion-input>
-
-  <ion-button fill="solid" shape="round" size="small" (click)="showPass()"><ion-icon name="{{typeIcon}}"></ion-icon></ion-button>
-
-
-    <ion-button fill="solid" shape="round" size="large" (click)="onSubmit()" type="submit"> Guardar Alterações</ion-button>
-  
-
-  </form>
-
-
+  <ion-grid>
+    <form [formGroup]="userUpdateForm" (ngSubmit)="onSubmit()">
+      <ion-row>
+        <ion-col size="12">
+          <ion-input class="text" label="Nome" formControlName="name" value="{{nome}}"></ion-input>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="10">
+          <ion-input class="text" label="Password" type="{{passwordType}}" formControlName="password"
+            value="{{password}}"></ion-input>
+        </ion-col>
+        <ion-col size="2">
+          <ion-button fill="solid" shape="round" size="small" (click)="showPass()"><ion-icon
+              name="{{typeIcon}}"></ion-icon></ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="12">
+          <ion-button id="submit" fill="solid" shape="round" size="large" (click)="onSubmit()" type="submit"> Guardar
+            Alterações</ion-button>
+        </ion-col>
+      </ion-row>
+    </form>
+  </ion-grid>
 </ion-content>
