--- a/src/app/add-ponto-int/add-ponto-int.page.html
+++ b/src/app/add-ponto-int/add-ponto-int.page.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <ion-back-button defaultHref="home" text="Voltar" color="dark"></ion-back-button>
       <ion-text class="ion-text-center">
-        <h2>Roteiro {{nomeP}}</h2>
+        <h3>Roteiro {{nomeP}}</h3>
       </ion-text>
     </ion-buttons>
   </ion-toolbar>
