--- a/src/app/roteiro/roteiro.page.html
+++ b/src/app/roteiro/roteiro.page.html
@@ -129,7 +129,7 @@
 
         <ion-row class="bottom">
           <ion-col size="12">
-            <ion-button expand="block" fill="solid" shape="round" class="i-text">
+            <ion-button expand="block" fill="solid" shape="round" class="i-text" (click)="navigate()">
               Ver rota
             </ion-button>
           </ion-col>
