Logout and Detele PDI

--- a/src/app/discovery/discovery.page.html
+++ b/src/app/discovery/discovery.page.html
@@ -17,7 +17,7 @@
   <h2 id="title">Descobrir</h2>
 </ion-text>
 
-<ion-searchbar animated="true" debounce=250 placeholder="Encontre um Roteiro por Cidade" show-clear-button="focus" (ionInput)="handleInput($event)"></ion-searchbar>
+<ion-searchbar animated="true" debounce=250 placeholder="Encontre um Roteiro" show-clear-button="focus" (ionInput)="handleInput($event)"></ion-searchbar>
 
  <div id="container" class="divv">
     
