--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -40,6 +40,11 @@
             Alterações</ion-button>
         </ion-col>
       </ion-row>
+      <ion-row>
+        <ion-col size="12">
+          <ion-button id="submit" fill="solid" shape="round" size="large" (click)="logout()">Logout</ion-button>
+        </ion-col>
+      </ion-row>
     </form>
   </ion-grid>
 </ion-content>
