--- a/src/app/roteiro/roteiro.page.html
+++ b/src/app/roteiro/roteiro.page.html
@@ -41,8 +41,8 @@
           </ion-button>
       </ion-col>
       <ion-col size="3">
-        <ion-button expand="block" fill="solid" class="i-text shadow" >
-          <ion-icon name="bus"></ion-icon>
+        <ion-button expand="block" fill="solid" class="i-text shadow"  (click)="removerPontodeinteresse(pontodeinteresse.ponto_id || 0)">
+          <ion-icon name="trash-outline"></ion-icon>
         </ion-button>
       </ion-col>
     </ion-row>
