Back button, Heuristica

--- a/src/app/route-add/route-add.page.html
+++ b/src/app/route-add/route-add.page.html
@@ -1,5 +1,9 @@
 <ion-header >
-
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="home" text="Voltar" color="dark"></ion-back-button>
+    </ion-buttons>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true" class="ion-padding">
